--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -269,7 +269,8 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url('{{ site.baseurl }}/img/header-bg.jpg');
+    /* background-image: url('{{ site.baseurl }}/img/header-bg.jpg'); */
+    background-image: url('https://oss.lixiaoxu.cn/blog/ChMkJlbQI3KIa4xfABbLIPrAmC0AALstgHq8YwAFss4089.jpg');
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
