--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,7 +8,7 @@
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4">
+                <!-- <div class="col-md-4">         
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa-brands fa-slack fa-stack-1x fa-inverse"></i>
@@ -36,6 +36,10 @@
                     </span>
                     <h4 class="service-heading">未来规划</h4>
                     <p class="text-muted">项目管理</p>
+                </div> -->
+
+                <div class="chart">
+                    
                 </div>
             </div>
         </div>
