--- a/_includes/js.html
+++ b/_includes/js.html
@@ -15,3 +15,8 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="{{ "/js/agency.js" | prepend: site.baseurl }}"></script>
+
+     <!-- 图表 -->
+     <script src="{{ "/js/index.js" | prepend: site.baseurl }}"></script>
+     <script src="{{ "/js/echarts.min.js" | prepend: site.baseurl }}"></script>
+
