--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -488,6 +488,10 @@ section h3.section-subheading {
     border-left-width: 0;
 }
 
+timeline-image:hover{
+    border:1px yellow solid;
+}
+
 .timeline>li .timeline-image {
     z-index: 100;
     position: absolute;
