--- a/_includes/services.html
+++ b/_includes/services.html
@@ -38,8 +38,10 @@
                     <p class="text-muted">项目管理</p>
                 </div> -->
 
-                <div class="chart">
+                <div class="echart">
+                    <div class="chart">
                     
+                    </div>
                 </div>
             </div>
         </div>
