--- a/_includes/services.html
+++ b/_includes/services.html
@@ -38,7 +38,7 @@
                     <p class="text-muted">项目管理</p>
                 </div> -->
 
-                <div class="echart">
+                <div class="echart" style="width:500px; height:500px">
                     <div class="chart">
                     
                     </div>
