--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,4 +1,6 @@
 <!-- Services Section -->
+<script src="{{ "/js/echarts.min.js" | prepend: site.baseurl }}"></script>
+
     <section id="services">
         <div class="container">
             <div class="row">
@@ -40,7 +42,7 @@
 
                 <div class="echart" style="width:500px; height:500px">
                     <div class="chart">
-                    
+ 
                     </div>
                 </div>
             </div>
