--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,9 +14,9 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
-                        <li><a href="#">隐私策略</a>
+                        <li><a href="https://privacy.microsoft.com/zh-cn/privacystatement">隐私策略</a>
                         </li>
-                        <li><a href="#">使用条款</a>
+                        <li><a href="https://www.microsoft.com/zh-cn/legal/terms-of-use">使用条款</a>
                         </li>
                     </ul>
                 </div>
