--- a/_includes/services.html
+++ b/_includes/services.html
@@ -1,5 +1,5 @@
 <!-- Services Section -->
-<script src="{{ "/js/echarts.min.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/index.js" | prepend: site.baseurl }}"></script>
 
     <section id="services">
         <div class="container">
