--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     {% include modals.html %}
     {% include js.html %}
 
-    
+    <script src="{{ "/js/index.js" | prepend: site.baseurl }}"></script>
 
     </body>
 </html>
