--- a/_includes/services.html
+++ b/_includes/services.html
@@ -9,15 +9,20 @@
                 </div>
             </div>
             <div class="row text-center">
-                <!-- <div class="col-md-4">         
+                <div class="col-md-4">         
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa-brands fa-slack fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">基本掌握</h4>
                     <p class="text-muted">
-                        JSP、Servlet、JavaBean、JDBC、SpringMVC、SpringBoot、Mybatis、Oracle、Mysql、hive、etl 、Linux、HTML、CSS、JavaScript，jQuery、InfoPath、Axure 、Maven 、Git、Excel、Word、PPT、Visio、Photoshop
-
+                        JSP、Servlet、JavaBean、JDBC、SpringMVC、SpringBoot
+                        Mybatis、Oracle、Mysql、hive、etl 
+                        Linux
+                        HTML、CSS、JavaScript，jQuery
+                        InfoPath、Axure 
+                        Maven 、Git
+                        Excel、Word、PPT、Visio、Photoshop                       
                     </p>
                 </div>
                 <div class="col-md-4">
@@ -37,12 +42,12 @@
                     </span>
                     <h4 class="service-heading">未来规划</h4>
                     <p class="text-muted">项目管理</p>
-                </div> -->
+                </div>
 
-                <div class="echart" style="width:500px; height:500px">
+                <!-- <div class="echart" style="width:500px; height:500px">
                     <div class="chart">
  
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
