--- a/_includes/services.html
+++ b/_includes/services.html
@@ -16,13 +16,22 @@
                     </span>
                     <h4 class="service-heading">基本掌握</h4>
                     <p class="text-muted">
-                        JSP、Servlet、JavaBean、JDBC、SpringMVC、SpringBoot
+                        Java、数据库、服务器、前端、原型设计、办公软件、Photoshop
+                        <!-- JSP、Servlet、JavaBean、JDBC、SpringMVC、SpringBoot
                         Mybatis、Oracle、Mysql、hive、etl 
                         Linux
                         HTML、CSS、JavaScript，jQuery
                         InfoPath、Axure 
                         Maven 、Git
-                        Excel、Word、PPT、Visio、Photoshop                       
+                        Excel、Word、PPT、Visio、Photoshop
+                        'Java'],
+                        [57.1, 78254, '数据库'],
+                        [74.4, 41032, '前端'],
+                        [89.7, 20145, '服务器'],
+                        [68.1, 79146, '原型设计'],
+                        [19.6, 91852, '办公软件'],
+                        [10.6, 101852, '需求管理'],
+                        [32.7, 20112, 'Photoshop' -->
                     </p>
                 </div>
                 <div class="col-md-4">
