--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -279,6 +279,10 @@ header {
     -o-background-size: cover;
 }
 
+#services{
+    background-image: url('https://oss.lixiaoxu.cn/xixi/preview.jpg'); 
+}
+
 header .intro-text {
     padding-top: 100px;
     padding-bottom: 50px;
