--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -280,7 +280,7 @@ header {
 }
 
 #services{
-    background-image: url('https://oss.lixiaoxu.cn/xixi/preview.jpg'); 
+    background-image: url('https://oss.lixiaoxu.cn/xixi/preview1.jpg'); 
 }
 
 header .intro-text {
