--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -281,6 +281,12 @@ header {
 
 #services{
     background-image: url('https://oss.lixiaoxu.cn/xixi/preview1.jpg'); 
+    background-position: center center;
+    background-repeat: none;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
 }
 
 header .intro-text {
