--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -280,7 +280,8 @@ header {
 }
 
 #services{
-    background-image: url('https://oss.lixiaoxu.cn/xixi/preview1.jpg'); 
+    color: #fff;
+    background-image: url('https://oss.lixiaoxu.cn/xixi/ChMkJlbKx2qIKPxiAAlXILFmr4gAALHzQFig2UACVc4500.jpg'); 
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
