--- a/_includes/services.html
+++ b/_includes/services.html
@@ -37,7 +37,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-light fa-alarm-clock fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-thin fa-heart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">正在学习</h4>
                     <p class="text-muted">
