--- a/_includes/js.html
+++ b/_includes/js.html
@@ -18,5 +18,9 @@
 
      <!-- 图表 -->
      <!-- <script src="{{ "/js/echarts.min.js" | prepend: site.baseurl }}"></script> -->
+
+     <!-- 背景特效 -->
+     <script src="{{ "/js/backgroud.js" | prepend: site.baseurl }}"></script>
+
     
 
