--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -290,10 +290,10 @@ header {
     -o-background-size: cover;
 }
 
-header .intro-text {
+/* header .intro-text {
     padding-top: 100px;
     padding-bottom: 50px;
-}
+} */
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
