--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">这大概就是我的经历拉，时间很短日子很长，咱们来日方长.</p>
                 </div>
             </div>
         </div>
