--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">个人简历</h2>
+                    <h2 class="section-heading">个人经历</h2>
                     <h3 class="section-subheading text-muted">成为你可能成为的那个人永远不会太晚.</h3>
                 </div>
             </div>
