--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,8 +45,8 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">欢迎来到我的世界!</div>
-                <div class="intro-heading">很高兴见到你~</div>
-                <a href="#services" class="page-scroll btn btn-xl">更多</a>
+                <div class="intro-heading">Nice to see you~</div>
+                <a href="https://imxixi.cn/" class="page-scroll btn btn-xl">返回博客</a>
             </div>
         </div>
     </header>
