--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                         <a class="page-scroll" href="#services">技能</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">项目</a>
+                        <a class="page-scroll" href="#portfolio">作品</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">经历</a>
