cs img-responsive

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -883,8 +883,8 @@ body {
     webkit-tap-highlight-color: #{{ site.data.template.color.primary }};
 }
 
-/*发光 */
-@keyframes img-responsive img-circle {
+/*发光 img-circle*/
+@keyframes img-responsive{
     from {
        box-shadow:0px 0px 4px #f00;
     }
